Adding home app and templates

--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
     {% endblock %}
 
     {% block extra_meta %}
-    {% endclock %}
+    {% endblock %}
 
     {% block corecss %}
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
@@ -39,6 +39,9 @@
     {% endif %}    
 
     {% block page_header %}
+    {% endblock %}
+
+    {% block content %}
     {% endblock %}
 
     {% block postloadjs %}
