Adding product template

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -57,7 +57,17 @@ body {
 }
 
 .bg-black {
-    background: #000 !important;
+    background: #000 !;
+}
+
+.overlay {
+	height: 100%;
+	width: 100%;
+	top: 0;
+	left: 0;
+	position: fixed;
+	background: white;
+	z-index: -1;
 }
 
 /* -------------------------------- Media Queries */
