--- a/static/css/base.css
+++ b/static/css/base.css
@@ -7,7 +7,7 @@ body {
     background-size: cover;
     height: calc(100vh - 164px);
     color: #555;
-    font-family: 'Lato', sans-serif;
+    font-family: 'Lato';
 }
 
 /* from Bulma */
@@ -57,7 +57,7 @@ body {
 }
 
 .bg-black {
-    background: #000 !;
+    background: #000 !important;
 }
 
 .overlay {
@@ -68,6 +68,23 @@ body {
 	position: fixed;
 	background: white;
 	z-index: -1;
+}
+
+a.category-badge > span.badge:hover {
+    background: #212529 !important;
+    color: #fff !important;
+}
+
+.btt-button {
+    height: 42px;
+    width: 42px;
+    position: fixed;
+    bottom: 10px;
+    right: 10px;
+}
+
+.btt-link {
+    cursor: pointer;
 }
 
 /* -------------------------------- Media Queries */
